feat: parallel workflow with DAG-based concurrent execution (Issue #18) (#45)
* feat: parallel workflow with DAG-based concurrent execution (Issue #18)

Add Workflow.PARALLEL -- concurrent task execution using Java 21 virtual
threads, with the dependency graph derived from each task's context list.

New classes:
- TaskDependencyGraph: identity-based DAG from task context declarations;
  provides getRoots(), getReadyTasks(completed), getDependents(task)
- ParallelWorkflowExecutor: virtual-thread executor using
  Executors.newVirtualThreadPerTaskExecutor() (stable Java 21 API, no
  preview flags); CountDownLatch coordination; MDC propagation from
  caller thread into each virtual thread
- ParallelErrorStrategy: FAIL_FAST (default) or CONTINUE_ON_ERROR
- ParallelExecutionException: thrown by CONTINUE_ON_ERROR when partial
  failures occur; carries completedTaskOutputs + failedTaskCauses map

Changes to existing classes:
- Workflow: add PARALLEL enum value
- Ensemble: add parallelErrorStrategy field (default FAIL_FAST);
  validateParallelErrorStrategy(); validateContextOrdering() skips
  PARALLEL (DAG drives order, list order irrelevant); selectExecutor()
  PARALLEL branch; resolveTasks() pass-2 now updates originalToResolved
  as final tasks are created so diamond-pattern deps resolve correctly
- ShortTermMemory: CopyOnWriteArrayList for thread-safe concurrent writes;
  getEntries() returns immutable snapshot (List.copyOf)
- MemoryContext: updated Javadoc reflecting thread-safe status

Tests added (297 -> 357, +60):
- TaskDependencyGraphTest: 21 tests (roots, ready tasks, dependents,
  diamond, linear chain, identity semantics)
- ParallelWorkflowExecutorTest: 16 tests (single task, independent,
  linear chain, diamond, ordering, fail-fast, continue-on-error,
  dependency skipping, memory integration, concurrent execution)
- ParallelEnsembleIntegrationTest: 16 tests (E2E via Ensemble.run())
- ShortTermMemoryTest: +2 concurrent safety tests; +1 snapshot semantics
- Excep